# actilib

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
src/actilib/: detectability.py  helpers.py  reporting.py
src/actilib/analysis/: detectability.py  gnl.py  nps.py  rois.py  segmentation.py  ttf.py
src/actilib/gui/: MplCanvas.py  TableModel.py  VLabel.py  gnl-inspector.py  reference.py  roi_creator.py
src/actilib/helpers/: dataload.py  detectability.py  display.py  general.py  geometry.py  imquest.py  io.py  math.py  noise.py  nps.py  rois.py  ttf.py
src/actilib/imquest/: helpers.py  reporting.py
src/actilib/phantoms/: mercury4.py
src/actilib/resources/: dicom_not.tar.xz  dicom_nps.tar.xz  dicom_ttf.tar.xz  save_json_results.m  test_data.json
src/actilib/resources/dicom/nps/: noise_rois.py
src/actilib/resources/matlab/: batch_process_folders.m  save_json_results.m
tests/: eye_test.py  fourier.py  reporting_test.py  test_analysis.py  test_classification.py  test_debug.py  test_gnl.py  test_nps.py  test_roi.py  test_ttf.py  test_ttf_dprime.py
