[metadata]
name = actilib
version = 0.2.1
author = Davide Cester
author_email = software@cester.net
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davide84/actilib
project_urls =
    Bug Tracker = https://github.com/davide84/actilib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

