[metadata]
name = actilib
version = 0.11.0
author = Davide Cester
description = Python library to analyze CT images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/USZ-MPER/actilib
project_urls =
    Bug Tracker = https://github.com/USZ-MPER/actilib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

